// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Item should render headerFilter icons if enabled 1`] = `
<div>
  <div
    aria-label="Field name Column 1"
    class="dx-cardview-header-item  "
    role="menuitem"
  >
    Column 1
    <div
      class="dx-icon dx-icon-filter dx-header-filter-icon "
    />
  </div>
</div>
`;

exports[`Item should render sort icons 1`] = `
<div>
  <div
    aria-label="Field name Column 1, Sorted in ascending order, Sort index 1"
    class="dx-cardview-header-item  "
    role="menuitem"
  >
    Column 1
    <div
      class="dx-cardview-header-item-sorting"
    >
      <div
        class="dx-icon dx-icon-arrowsortup"
      />
    </div>
    <div
      class="dx-icon dx-icon-filter dx-header-filter-icon "
    />
  </div>
</div>
`;

exports[`Item should use column caption as text 1`] = `
<div>
  <div
    aria-label="Field name my column caption"
    class="dx-cardview-header-item  "
    role="menuitem"
  >
    my column caption
    <div
      class="dx-icon dx-icon-filter dx-header-filter-icon "
    />
  </div>
</div>
`;
